...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="6af-bA-nE2" userLabel="Timer L
                                                <rect key="frame" x="16" y="5" width="382" height="100.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Countdown Timer Label"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="84"/>
                                                <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Reset Button"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="OZY-Xf-oo7" secondAttribute="height" multiplier="1:1" id="gMG-Md-I19"/>
...
                                        <rect key="frame" x="270" y="0.0" width="80" height="80"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Start/Pause Button"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="iwQ-ih-Ica" secondAttribute="height" multiplier="1:1" id="NXd-m4-oHf"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="25 min" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wpr-Sh-fSX" userLabel="Focus Time Duration">
                                                            <rect key="frame" x="239" y="0.0" width="143" height="48"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Focus Time Value"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                            <nil key="textColor"/>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="Focus Time Picker Cell"/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="48" id="Von-O2-Syp" userLabel="Break Time Label Cell">
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="5 min" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJZ-KR-59W" userLabel="Focus Time Duration">
                                                            <rect key="frame" x="255.5" y="0.0" width="126.5" height="48"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Break Time Value"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                            <nil key="textColor"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="0.0" id="EYu-4J-bK1" userLabel="Break Time Picker Cell">
                                        <rect key="frame" x="0.0" y="151.50000011920929" width="414" height="1.1920928955078125e-07"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
